<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/main_view"
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#FF000000" >
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:src="@drawable/background_race"
		android:scaleType="centerCrop"
		/>
	<TextView
		android:id="@+id/main_head"
		android:layout_width="wrap_content"
		android:layout_height="60dp"
		android:layout_marginEnd="5dp"
		android:text="@string/android_racer"
		android:textSize="46sp"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="10dp"
	/>
	<LinearLayout android:id="@+id/button_menu"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_alignParentEnd="true"
		android:layout_below="@id/main_head"
		>
		<Button
			android:id="@+id/play"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:background="@drawable/button"
			android:text="@string/play"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
		<Button
			android:id="@+id/resume"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:background="@drawable/button"
			android:text="@string/resume"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
		<Button
			android:id="@+id/multi"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginRight="5dp"
			android:background="@drawable/button"
			android:text="@string/multiplayer"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
		<Button
			android:id="@+id/help_button"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:background="@drawable/button"
			android:text="@string/help"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
		<Button
			android:id="@+id/high_score_button"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:background="@drawable/button"
			android:text="@string/high_scores"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
		<Button
			android:id="@+id/settings_button"
			android:layout_width="320dp"
			android:layout_height="46dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:background="@drawable/button"
			android:text="@string/settings"
			android:textColor="#FFFFFFFF"
			android:textSize="36sp"
			android:gravity="right"
			/>
	</LinearLayout>
	<TextView
		android:id="@+id/footer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="5dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:text="@string/a_silence_product"
		android:textSize="30sp"
		android:textColor="#FFFFFFFF"
		/>

</RelativeLayout>